# game-engine-2d

./: .gitignore  CMakeLists.txt  LICENSE
include/: Engine.hpp
include/Application/: Application.hpp  Cube.hpp
include/OpenGL/: Common.hpp
include/OpenGL/Entity/: Component.hpp  Entity.hpp  EntitySystem.hpp  TransformComponent.hpp
include/OpenGL/Game/: Game.hpp
include/OpenGL/Graphics/: Graphics.hpp  ShaderProgram.hpp  UniformBuffer.hpp  VertexArrayObject.hpp
include/OpenGL/Graphics/Resources/: Mesh.hpp  Texture.hpp
include/OpenGL/Input/: InputListener.hpp  InputSystem.hpp
include/OpenGL/Math/: Mat4x4.hpp  Rect.hpp
include/OpenGL/Window/: Window.hpp
resources/shaders/: fragment.frag  vertex.vert
src/: main.cpp
src/Application/: Application.cpp  Cube.cpp
src/OpenGL/Entity/: Component.cpp  Entity.cpp  EntitySystem.cpp  TransformComponent.cpp
src/OpenGL/Game/: Game.cpp
src/OpenGL/Graphics/: Graphics.cpp  ShaderProgram.cpp  UniformBuffer.cpp  VertexArrayObject.cpp
src/OpenGL/Graphics/Resources/: Mesh.cpp  Texture.cpp
src/OpenGL/Input/: InputSystem.cpp
src/OpenGL/Window/: Window.cpp
